eliminate dependency to guava